@@ -6,13 +6,8 @@ import build.codemodel.foundation.usage.NamedTypeUsage;
 import build.codemodel.objectoriented.descriptor.AccessModifier;
 import build.codemodel.objectoriented.descriptor.FieldDescriptor;
 import build.codemodel.objectoriented.descriptor.MethodDescriptor;
-import com.google.testing.compile.Compilation;
-import com.google.testing.compile.Compiler;
-import com.google.testing.compile.JavaFileObjects;
 import org.junit.jupiter.api.Test;
 
-import java.nio.file.FileSystems;
-import java.util.Arrays;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -23,7 +18,8 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author brian.oliver
  * @since Mar-2024
  */
-public class FieldDiscoveryTests {
+public class FieldDiscoveryTests
+    extends AnnotationProcessorTests {
 
     /**
      * Ensure the {@link FieldDescriptor}s are created for <i>fields</i>.
@@ -43,34 +39,8 @@ public class FieldDiscoveryTests {
                         final String finalString = "Final";          
                     }                                    
                 """;
-
-        final var fileSystem = FileSystems.getDefault();
-
-        final var classPath = Arrays.stream(System.getProperty("java.class.path").split(":"))
-            .map(file -> fileSystem.getPath(file).toFile())
-            .toList();
-
         final var annotationProcessor = new AnnotationProcessor();
-
-        assertThat(annotationProcessor.getCodeModel().isEmpty())
-            .isTrue();
-
-        var compiler = Compiler.javac()
-            .withClasspath(classPath)
-            .withProcessors(annotationProcessor);
-
-        final var modulePath = System.getProperty("jdk.module.path");
-        if (modulePath != null) {
-            compiler = compiler
-                .withOptions("--module-path=" + modulePath,
-                    "--add-modules=build.codemodel.foundation,build.codemodel.jdk.annotation.discovery");
-        }
-
-        final var compilation = compiler
-            .compile(JavaFileObjects.forSourceString("Discover", source));
-
-        assertThat(compilation.status())
-            .isEqualTo(Compilation.Status.SUCCESS);
+        compile(annotationProcessor, "Discover", source);
 
         final var codeModel = annotationProcessor.getCodeModel()
             .orElseThrow();
